# pios

./: .clang-format  .clangd  .gitignore  Makefile  README.md  autoupload.sh  compile_flags.txt  config.txt  general-notes.md  linker.ld  uart.sh
doc/: report.typ
include/: base.h  clock.h  common.h  emmc.h  exception.h  framebuffer.h  gpio.h  gpt.h  halt.h  i2c.h  init.h  log.h  mailbox.h  malloc.h  math.h  printf.h  pwm.h  random.h  sleep.h  sqlite-api.h  string.h  time.h  timer.h  try.h  uart.h
include/devices/: aht20.h  ds3231.h  lcd.h  mcp23017.h
rust/: Cargo.toml
rust/src/: cstr.rs  lib.rs  panic.rs  writer.rs
rust/src/api/: mod.rs  parse.rs  write.rs
sqlite/: assert.h  compile_flags.txt  malloc.h  sqlite3.h  stdarg.h  stddef.h  stdio.h  stdlib.h  string.h  time.h
src/: armstub.s  boot.s  clock.c  emmc.c  exception.c  exception.s  framebuffer.c  gpio.c  gpt.c  halt.c  i2c.c  init.c  kernel.c  log.c  mailbox.c  main.c  malloc.c  math.c  mmu.c  printf.c  pwm.c  random.c  sleep.c  sqlite-api.c  string.c  time.c  timer.c  uart.c
src/demos/: act-blink.c  aht20.c  audio.c  ds3231.c  emmc.c  lcd.c  led-pwm.c  print-el.c  word-count.c
src/devices/: aht20.c  ds3231.c  lcd.c  mcp23017.c
